# unityplatform

./: .env.example  .gitignore  CHANGELOG.md  MULTI-POD-README.md  README.md  VERSIONS.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.monolith.yml.old  docker-compose.multi-territory-pod.yml  docker-compose.pod.yml  docker-compose.yml
.github/: copilot-instructions.md
docker/dev-dashboard/: index.html
docker/grafana/provisioning/dashboards/: docker-containers.json  monitoring.json  multi-pod-overview.json  nats.json  node-exporter.json  pod-denmark-overview.json  postgres.json  redis.json
docker/grafana/provisioning/datasources/: datasources.yml
docker/placeholder-pages/: frontend.html
docker/postgres/: init.sql
docker/prometheus/: prometheus-central.yml  prometheus.yml
docker/traefik/: traefik.yml
docker/traefik/error-pages/: 503.html
docker/traefik/landing-page/: index.html
docs/: README.md  deployment-notes.md
docs/architecture/: frontend-stack-rationale.md  identity-system.md  invitation-system.md  user-data-sovereignty.md
docs/guides/backend/: README.md  development-plan.md  observability.md  testing-guide.md
docs/guides/deployment/: cicd.md  multi-pod-deployment.md  nats-clustering.md  testing-verification.md
docs/guides/development/: database-query-patterns.md  development-tools.md  testing-best-practices.md  versioning-strategy.md
docs/guides/frontend/: README.md  component-patterns.md  component-registry.md  development-guide.md  state-management.md  testing-guide.md
docs/guides/operations/: forgejo-mcp-setup.md  migration-notes.md
docs/guides/shared/: README.md  development-tools.md
docs/project/: overview.md  summary.md  tech-stack.md
docs/status/: auth-service-implementation.md
docs/status/current/: phase-1-checklist.md  phase-1-status.md
docs/status/roadmaps/: phase-1-mvp.md  phase-2-scale.md  phase-3-decentralization.md
project_docs/: 11-rust-backend-development-plan.md  2-project-overview.md  4-project-infrastructure.md  5-multi-pod-architecture.md  9-territory-management-standard.md
project_status/: phase-1-development-approach.md  phase-1-implementation-checklist.md  phase-1-mvp-roadmap.md  phase-1-status.md  phase-3-decentralization-roadmap.md
scripts/: README.md  create-bootstrap-invitation.sh  deploy-multi-pod.sh  install-dev-tools.sh  setup-dev.sh  start-architecture.sh  start-dev.sh  stop-architecture.sh  stop-dev.sh  verify-multi-pod.sh
scripts/old/: start-dev.sh
services/: Cargo.toml
services/auth-service/: Cargo.toml
services/auth-service/src/: lib.rs  main.rs
services/auth-service/src/handlers/: auth.rs  invitation.rs  mod.rs
services/auth-service/src/middleware/: auth.rs  mod.rs
services/auth-service/src/models/: auth.rs  invitation.rs  mod.rs  user.rs
services/auth-service/src/services/: invitation.rs  mod.rs  password.rs  token.rs
services/auth-service/src/utils/: crypto.rs  mod.rs  validation.rs
services/auth-service/tests/: README.md  integration_tests.rs  lib.rs
services/auth-service/tests/common/: mod.rs
services/auth-service/tests/integration/: auth.rs  auth.rs.backup  invitation.rs  invitation.rs.backup  mod.rs
services/shared-lib/: CHANGELOG.md  Cargo.toml  build.rs
services/shared-lib/migrations/: 20251105000001_initial_schema.down.sql  20251105000001_initial_schema.up.sql  20251106000001_user_data_sovereignty.down.sql  20251106000001_user_data_sovereignty.up.sql  20251106000002_fix_user_boolean_constraints.down.sql  20251106000002_fix_user_boolean_constraints.up.sql  20251106000003_add_invitation_system.down.sql  20251106000003_add_invitation_system.up.sql  20251108000001_global_schema.down.sql  20251108000001_global_schema.up.sql  20251108000001_identity_system_update.down.sql  20251108000001_identity_system_update.up.sql  20251108000002_territory_schema.down.sql  20251108000002_territory_schema.up.sql  20251108000003_seed_data_dk.down.sql  20251108000003_seed_data_dk.up.sql  20251108000004_user_profiles_and_connections.down.sql  20251108000004_user_profiles_and_connections.up.sql
services/shared-lib/src/: config.rs  database.rs  error.rs  lib.rs  nats.rs
services/user-service/: Cargo.toml
services/user-service/src/: lib.rs  main.rs
services/user-service/src/handlers/: avatar.rs  connections.rs  mod.rs  profile.rs
services/user-service/src/models/: connection.rs  mod.rs  privacy.rs  profile.rs
services/user-service/src/services/: mod.rs  storage_service.rs  user_service.rs
services/user-service/tests/: lib.rs
services/user-service/tests/common/: mod.rs
services/user-service/tests/integration/: blocks.rs  connections.rs  mod.rs  profile.rs
