[workspace]
resolver = "2"
members = [ "auth-service",
    "shared-lib", "user-service",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["UnityPlan Team <dev@unityplan.org>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/unityplan/platform"
repository = "https://github.com/unityplan/platform"
documentation = "https://docs.unityplan.org"
keywords = ["education", "collaboration", "decentralized", "multi-tenant"]
categories = ["web-programming", "authentication"]

[workspace.metadata]
# Minimum Supported Rust Version
msrv = "1.75.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = "0.7"

# Web framework
actix-web = "4.9"
actix-cors = "0.7"
actix-rt = "2.10"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Time & UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
bytes = "1.9"

# NATS messaging
async-nats = "0.37"

# Authentication & Security
jsonwebtoken = "9.3"
argon2 = "0.5"
rand = "0.8"

# Prometheus metrics
prometheus = "0.13"
actix-web-prometheus = "0.1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
