[package]
name = "auth-service"
version.workspace = true
edition = "2021"

[dependencies]
# Shared library
shared-lib = { path = "../shared-lib" }

# Web framework
actix-web = "4"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Authentication
argon2 = "0.5"
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Error handling
anyhow = "1"
thiserror = "1"

# Crypto
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# Regex
regex = "1"
lazy_static = "1.4"
