[package]
name = "user-service"
version = "0.1.0-alpha.1"
edition = "2021"

[lib]
name = "user_service"
path = "src/lib.rs"

[[bin]]
name = "user-service"
path = "src/main.rs"

[dependencies]
# Shared library
shared-lib = { path = "../shared-lib" }

# Actix web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-multipart = "0.6"
actix-files = "0.6"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing
image = "0.24"
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }
validator = { version = "0.16", features = ["derive"] }
futures-util = "0.3"

[dev-dependencies]
actix-rt = "2.9"
tempfile = "3.8"
